@@ -1,3 +1,6 @@
+2011-03-30 lucas
+* Anonymous can not view the Configurator Tool.
+
 2010-01-03 lucas
 * Moved the extension ConfigurationTemplate_readOOoCalcFile to this bt5.
 
